--- a/app/src/main/res/layout-land/fragment_log_spot.xml
+++ b/app/src/main/res/layout-land/fragment_log_spot.xml
@@ -1,74 +1,82 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="uk.co.tezk.trainspotter.view.LogSpotFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
-        <GridLayout
-            android:id="@+id/gridLayout"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardViewDetails"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fragment_margin"
-            android:padding="12dp">
+            android:backgroundTint="@color/white"
+            app:cardCornerRadius="8dp">
 
-            <TextView
-                android:id="@+id/tvId"
+            <GridLayout
+                android:id="@+id/gridLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="0"
-                android:text="@string/train_id" />
 
-            <EditText
-                android:id="@+id/etTrainId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="0"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="" />
+                android:padding="12dp">
 
-            <TextView
-                android:id="@+id/tvDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="1"
-                android:text="@string/date" />
+                <TextView
+                    android:id="@+id/tvId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_row="0"
+                    android:text="@string/train_id" />
 
-            <EditText
-                android:id="@+id/etDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_row="1"
-                android:ems="10"
-                android:inputType="date"
-                android:text="" />
-        </GridLayout>
+                <EditText
+                    android:id="@+id/etTrainId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_row="0"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="" />
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_row="1"
+                    android:text="@string/date" />
+
+                <EditText
+                    android:id="@+id/etDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_row="1"
+                    android:ems="10"
+                    android:inputType="date"
+                    android:text="" />
+            </GridLayout>
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvSpotImages"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/gridLayout"/>
+            android:layout_below="@id/cardViewDetails" />
 
         <fragment
             android:id="@+id/mapHolder"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/gridLayout"
-
             android:layout_alignParentTop="true"
+
+            android:layout_toRightOf="@id/gridLayout"
             tools:context="uk.co.tezk.trainspotter.view.MapsActivity">
 
         </fragment>
