--- a/app/src/main/res/layout-land/fragment_train_detail.xml
+++ b/app/src/main/res/layout-land/fragment_train_detail.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,8 +7,15 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardViewDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fragment_margin"
+            android:backgroundTint="@color/white"
+            app:cardCornerRadius="8dp">
 
         <GridLayout
             android:id="@+id/gridLayout"
@@ -17,10 +25,10 @@
 
             <TextView
                 android:id="@+id/tcClassLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
+                android:layout_gravity="right"
                 android:layout_marginBottom="8dp"
                 android:layout_row="0"
                 android:text="Class :" />
@@ -35,12 +43,12 @@
 
             <TextView
                 android:id="@+id/tvTrainNumberLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="1"
+                android:layout_gravity="right"
                 android:layout_marginBottom="8dp"
+                android:layout_row="1"
                 android:text="@string/number" />
 
             <TextView
@@ -53,12 +61,12 @@
 
             <TextView
                 android:id="@+id/tvTrainNameLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="2"
+                android:layout_gravity="right"
                 android:layout_marginBottom="8dp"
+                android:layout_row="2"
                 android:text="@string/name" />
 
             <TextView
@@ -67,17 +75,16 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="2"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:ems="10"/>
 
             <TextView
                 android:id="@+id/tvTrainLiveryLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="3"
+                android:layout_gravity="right"
                 android:layout_marginBottom="8dp"
+                android:layout_row="3"
                 android:text="@string/livery" />
 
             <TextView
@@ -86,17 +93,16 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="3"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:ems="10" />
 
 
             <TextView
                 android:id="@+id/tvTrainOperatorLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_column="0"
+                android:layout_gravity="right"
+                android:layout_marginBottom="8dp"
                 android:layout_row="4"
                 android:text="@string/operator" />
 
@@ -106,17 +112,16 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="4"
-                android:ems="10"
-                android:inputType="textPersonName" />
+                android:ems="10" />
 
             <TextView
                 android:id="@+id/tvTrainDepotLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="5"
+                android:layout_gravity="right"
                 android:layout_marginBottom="8dp"
+                android:layout_row="5"
                 android:text="@string/depot" />
 
             <TextView
@@ -125,14 +130,14 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="5"
-                android:ems="10"/>
+                android:ems="10" />
 
             <TextView
                 android:id="@+id/tvTrainLastSpottedLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
+                android:layout_gravity="right"
                 android:layout_row="6"
 
                 android:text="@string/last_seen" />
@@ -142,45 +147,47 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
-                android:layout_row="6"
-                android:ems="10"
                 android:layout_marginBottom="8dp"
-                android:inputType="textPersonName" />
+                android:layout_row="6"
+                android:ems="10" />
 
             <TextView
                 android:id="@+id/tvTrainWhereLabel"
-                android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
+                android:layout_gravity="right"
                 android:layout_row="7"
                 android:text="@string/where" />
+
             <TextView
                 android:id="@+id/tvTrainWhere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:layout_row="7"
-                android:ems="10"/>
+                android:ems="10" />
         </GridLayout>
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvGallery"
-            android:layout_below="@+id/gridLayout"
             android:layout_width="match_parent"
-            android:layout_marginRight="@dimen/fragment_margin"
-            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_height="80dp"
+            android:layout_alignRight="@+id/cardViewDetails"
+            android:layout_below="@+id/cardViewDetails"
             android:layout_marginBottom="@dimen/fragment_margin"
-            android:layout_alignRight="@+id/gridLayout"
-            android:layout_height="80dp">
+            android:layout_marginLeft="@dimen/fragment_margin"
+            android:layout_marginRight="@dimen/fragment_margin">
 
         </android.support.v7.widget.RecyclerView>
+
         <FrameLayout
             android:id="@+id/mapHolder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:layout_toRightOf="@+id/gridLayout">
+            android:layout_toRightOf="@+id/cardViewDetails">
 
         </FrameLayout>
 
