--- a/app/src/main/res/layout/fragment_log_spot.xml
+++ b/app/src/main/res/layout/fragment_log_spot.xml
@@ -2,18 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="uk.co.tezk.trainspotter.view.LogSpotFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
 
+        >
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardViewDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="8dp"
+            android:layout_margin="@dimen/fragment_margin"
+            android:backgroundTint="@color/white"
+            >
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:layout_margin="@dimen/fragment_margin"
+
             android:layout_centerHorizontal="true"
             android:id="@+id/gridLayout">
 
@@ -56,16 +65,37 @@
                 android:textSize="16dp"
                 android:text="TextView" />
 
-        </GridLayout>
+            <TextView
+                android:id="@+id/tvLocationLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/location"
+                android:layout_gravity="right"
+                android:layout_marginTop="8dp"
+                android:layout_row="2"
+                android:layout_column="0" />
 
+            <EditText
+                android:id="@+id/etLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:padding="7dp"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:textSize="16dp"
+                android:text="" />
+
+        </GridLayout>
+        </android.support.v7.widget.CardView>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvSpotImages"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:foregroundGravity="center"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/gridLayout" />
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/cardViewDetails" />
 
         <FrameLayout
             android:id="@+id/mapHolder"
