--- a/app/src/main/res/layout/fragment_train_detail.xml
+++ b/app/src/main/res/layout/fragment_train_detail.xml
@@ -2,20 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="uk.co.tezk.trainspotter.view.TrainDetailFragment">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardViewDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fragment_margin"
+            android:backgroundTint="@color/white"
+            app:cardCornerRadius="8dp">
         <GridLayout
             android:id="@+id/gridLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/bpWhite"
             android:padding="8dp"
-            android:outlineProvider="background"
-            android:layout_margin="@dimen/fragment_margin">
+            android:outlineProvider="background">
 
             <TextView
                 android:id="@+id/tcClassLabel"
@@ -171,12 +178,13 @@
                 android:ems="7"
                 />
         </GridLayout>
+        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvGallery"
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            android:layout_below="@+id/gridLayout"
+            android:layout_below="@+id/cardViewDetails"
             android:layout_marginBottom="@dimen/fragment_margin"
             android:layout_marginLeft="@dimen/fragment_margin"
             android:layout_marginRight="@dimen/fragment_margin"></android.support.v7.widget.RecyclerView>
