--- a/app/src/main/res/layout/train_list_card_layout_item.xml
+++ b/app/src/main/res/layout/train_list_card_layout_item.xml
@@ -128,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_column="3"
             android:layout_row="2"
+            android:ems="6"
             android:text="TextView" />
 
         <ImageView
