--- a/app/src/main/res/layout-land/fragment_log_spot.xml
+++ b/app/src/main/res/layout-land/fragment_log_spot.xml
@@ -43,21 +43,20 @@
                     android:text="" />
 
                 <TextView
-                    android:id="@+id/tvDate"
+                    android:id="@+id/tvDateLabel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
                     android:layout_row="1"
                     android:text="@string/date" />
 
-                <EditText
-                    android:id="@+id/etDate"
+                <TextView
+                    android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:layout_row="1"
                     android:ems="10"
-                    android:inputType="date"
                     android:text="" />
 
                 <TextView
