--- a/app/src/main/res/layout/fragment_log_spot.xml
+++ b/app/src/main/res/layout/fragment_log_spot.xml
@@ -14,8 +14,6 @@
             android:id="@+id/cardViewDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
-            android:layout_margin="@dimen/fragment_margin"
             android:backgroundTint="@color/white"
             >
         <GridLayout
@@ -84,6 +82,7 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:textSize="16dp"
+                android:hint="Add location details"
                 android:text="" />
 
         </GridLayout>
